<resources>
    <string name="app_name">Heart Rate Monitor</string>
    <string name="action_settings">Settings</string>
    <string name="title_activity_device_list">DeviceListActivity</string>
    <string name="title_activity_history">History</string>
    <string name="title_activity_history_detail">HistoryDetail</string>
    <string name="select_device">Select a device</string>
    <string name="scanning">Scanning for devices&#8230;</string>
    <string name="ble_not_supported">Bluetooth Low Energy not supported</string>
    <string name="scan">Scan</string>
    <string name="cancel">Cancel</string>
    <string name="paired">paired</string>
    <string name="batteryLevel">Battery: N/A</string>
    <string name="device">Device:</string>
    <string name="no_device">" "</string>
    <string name="popup_title">Quit PPGMonitor?</string>
    <string name="quit_message">Do you want to quit this Application?</string>
    <string name="connect">Connect</string>
    <string name="disconnect">Disconnect</string>
    <string name="disconnect_message">Still connected, disconnect before quitting</string>
    <string name="popup_yes">YES</string>
    <string name="popup_ok">OK</string>
    <string name="popup_no">NO</string>
    <string name="not_available">NA</string>
    <string name="action_delete">Delete</string>
    <string name="text_hint">Click here to write text</string>
    <string name="sensor_position_label">sensor position </string>
    <string name="location_other">Reserved</string>
    <string name="ecg_files_list">Heart Rate Records</string>
    <string name="hr">HR</string>
    <string name="av_hr">AV. HR</string>
    <string name="title_activity_connect_dialog">ConnectDialog</string>
    <string name="sensor_id">SENSOR ID</string>
    <string name="patient_id">PATIENT ID</string>
    <string name="scan_sensor_title">Sensors Scanner</string>
    <string name="send">Send as Email</string>
    <string name="hr_measurement">Heart Rate Measurement</string>
    <string name="record_duration">DURATION</string>
</resources>
