<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:gravity="center_horizontal"
        android:layout_marginTop="10dp"
        android:layout_marginBottom="20dp"
        android:textColor="@color/black"
        android:textSize="25sp"
        android:textAlignment="center"
        android:text="@string/hr_measurement"/>


    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="150dp"
        android:layout_marginTop="10dp"
        android:orientation="horizontal">

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_alignParentStart="true"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <View
                android:layout_width="180dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/red" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/red"
                    android:text="@string/patient_id"/>
                <TextView
                    android:id="@+id/patient_id_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/whitegrey"/>
            </LinearLayout>

            <View
                android:layout_width="180dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/red" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/red"
                    android:text="@string/record_duration"/>
                <TextView
                    android:id="@+id/duration_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/whitegrey"/>
            </LinearLayout>

        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_alignParentEnd="true"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <View
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/red" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/red"
                    android:text="@string/hr"/>
                <TextView
                    android:id="@+id/hr_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/whitegrey"/>
            </LinearLayout>

            <View
                android:layout_width="120dp"
                android:layout_height="1dp"
                android:layout_marginTop="5dp"
                android:background="@color/red" />
            <LinearLayout
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_marginBottom="10dp"
                android:orientation="horizontal">
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginEnd="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/red"
                    android:text="@string/av_hr"/>
                <TextView
                    android:id="@+id/av_hr_value_tv"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginStart="5dp"
                    android:textSize="15sp"
                    android:textColor="@color/whitegrey"/>
            </LinearLayout>

        </LinearLayout>

    </RelativeLayout>

    <LinearLayout
        android:id="@+id/hr_graph_layout"
        android:layout_width="match_parent"
        android:layout_height="0dp"
        android:layout_weight="1"
        android:layout_marginTop="20dp"
        android:layout_marginBottom="20dp"
        android:orientation="vertical"/>

    <Button
        android:id="@+id/send_email"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:background="@drawable/blue_button"
        android:text="@string/send"
        android:textColor="@color/whitegrey"
        android:textAlignment="center"/>

</LinearLayout>
