<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="fill_parent"
    android:layout_height="fill_parent"
    android:orientation="vertical"
    android:background="@drawable/background">

        <RelativeLayout
            android:layout_width="match_parent"
            android:layout_height="150dp"
            android:baselineAligned="false"
            android:layout_marginTop="10dp"
            android:orientation="horizontal">

            <LinearLayout
                android:layout_width="150dp"
                android:layout_alignParentStart="true"
                android:layout_height="wrap_content"
                android:orientation="vertical">

                <TextView
                    android:id="@+id/patient_id"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="15dp"
                    android:textColor="@color/black"
                    android:textSize="15sp"/>

                <View
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/red" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/red"
                        android:text="@string/hr"/>
                    <TextView
                        android:id="@+id/hr_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/whitegrey"/>
                </LinearLayout>

                <View
                    android:layout_width="150dp"
                    android:layout_height="1dp"
                    android:layout_marginTop="5dp"
                    android:background="@color/red" />
                <LinearLayout
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginBottom="10dp"
                    android:orientation="horizontal">
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginEnd="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/red"
                        android:text="@string/av_hr"/>
                    <TextView
                        android:id="@+id/av_hr_value"
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:layout_marginStart="5dp"
                        android:textSize="15sp"
                        android:textColor="@color/whitegrey"/>
                </LinearLayout>

            </LinearLayout>

            <LinearLayout
                android:id="@+id/button_layout"
                android:layout_width="150dp"
                android:layout_alignParentEnd="true"
                android:layout_height="wrap_content"
                android:layout_marginEnd="5dp"
                android:orientation="vertical" >

                <Button
                    android:id="@+id/btn_connect"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/blue_button"
                    android:textSize="18sp"
                    android:text="Connect" />

                <Button
                    android:id="@+id/btn_history"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:paddingTop="4dp"
                    android:paddingBottom="4dp"
                    android:layout_marginTop="5dp"
                    android:layout_marginBottom="5dp"
                    android:background="@drawable/blue_button"
                    android:textSize="18sp"
                    android:text="History" />
            </LinearLayout>

        </RelativeLayout>

    <LinearLayout
        android:id="@+id/graph_layout"
        android:layout_width="match_parent"
        android:layout_height="300dp"
        android:paddingTop="75dp"
        android:paddingBottom="75dp"
        android:layout_gravity="center"
        android:orientation="vertical" >

    </LinearLayout>

    <RelativeLayout
        android:id="@+id/footer_layout"
        android:layout_width="match_parent"
        android:gravity="bottom"
        android:layout_height="100dp">

        <TextView
            android:id="@+id/deviceName"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentStart="true"
            android:text="@string/no_device"
            android:textColor="@color/whitegrey"
            android:textAppearance="?android:attr/textAppearanceSmall" />

        <TextView
            android:id="@+id/timer_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:layout_alignParentBottom="true"
            android:layout_alignParentEnd="true"
            android:textColor="@color/whitegrey"
            android:textAppearance="?android:attr/textAppearanceSmall" />
    </RelativeLayout>

</LinearLayout>
